--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: haxe
 
+haxe:
+  - "3.1.3"
 install:
-    - hxcpp
-    - hxlode
-    - hxSerial
-    - hxjava
-    - nodejs
-
+  - hxcpp
+  - hxlode
+  - hxSerial
+  - hxjava
+  - nodejs
 hxml:
-    - build.hxml
+  - build.hxml
 #    - buildNodeJS.hxml
 
