--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,16 @@ language: haxe
 
 haxe:
   - "3.1.3"
+  - development
+
 install:
-  - hxcpp
-  - hxlode
-  - hxSerial
-  - hxjava
-  - nodejs
-hxml:
-  - build.hxml
-#    - buildNodeJS.hxml
+  - haxelib install hxcpp
+  - haxelib install hxjava
+  - haxelib install hxlode
+  - haxelib install hxSerial
+  - haxelib install nodejs
+
+script:
+  - haxe build.hxml
+  - haxe buildNodeJS.hxml
 
