--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: haxe
 
-#os:
-#  - linux
-#  - osx
+os:
+  - linux
+  - osx
 
 haxe:
   - "3.1.3"
@@ -17,7 +17,7 @@ install:
   - haxelib list
 
 script:
-  - haxe build.hxml
-  #- if [ "${TRAVIS_OS_NAME}" = "linux" ]; then haxe build.hxml; fi
-  #- if [ "${TRAVIS_OS_NAME}" = "osx" ]; then haxe buildMac.hxml; fi
+  - mkdir -p outNodeJS
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then haxe build.hxml; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then haxe buildMac.hxml; fi
 
