--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+git:
+  depth: 1
+
 language: haxe
 
 os:
@@ -6,7 +9,7 @@ os:
 
 haxe:
   - "3.1.3"
-  - development
+#  - development
 
 install:
   - haxelib install hxcpp
