--- a/checkstyleConfig.json
+++ b/checkstyleConfig.json
@@ -1,6 +1,20 @@
 {
     "checks": [
         {
+                "type": "AccessOrder",
+                "props": {
+                        "severity": "WARNING",
+                        "modifiers": [
+                                "MACRO",
+                                "OVERRIDE",
+                                "PUBLIC_PRIVATE",
+                                "STATIC",
+                                "INLINE",
+                                "DYNAMIC"
+                        ]
+                }
+        },
+        {
             "type": "Anonymous",
             "props": {
                 "severity": "ERROR"
@@ -13,10 +27,18 @@
             }
         },
         {
+            "type": "AvoidStarImport",
+            "props": {
+                "severity": "WARNING",
+                "allowStarImports": false,
+                "allowStarUsing": false
+            }
+        },
+        {
             "type": "BlockFormat",
             "props": {
                 "severity": "ERROR",
-                "emptyBlockCheck": false
+                "option": "text"
             }
         },
         {
@@ -57,17 +79,10 @@
             }
         },
         {
-            "type": "EmptyBlock",
-            "props": {
-                "severity": "ERROR",
-                "option": "text"
-            }
-        },
-        {
             "type": "EmptyLines",
             "props": {
                 "severity": "INFO",
-                "maxConsecutiveEmptyLines": 1
+                "max": 1
             }
         },
         {
@@ -87,6 +102,15 @@
             "type": "HexadecimalLiterals",
             "props": {
                 "severity": "INFO"
+            }
+        },
+        {
+            "type": "HiddenField",
+            "props": {
+                "severity": "WARNING",
+                "ignoreConstructorParameter": true,
+                "ignoreSetter": true,
+                "ignoreFormat": "^(main)$"
             }
         },
         {
@@ -131,7 +155,7 @@
             "type": "LineLength",
             "props": {
                 "severity": "ERROR",
-                "maxCharacters": 160
+                "max": 160
             }
         },
         {
@@ -150,7 +174,7 @@
             "type": "MethodLength",
             "props": {
                 "severity": "ERROR",
-                "maxFunctionLines": 150
+                "max": 150
             }
         },
         {
@@ -165,7 +189,7 @@
             "type": "MemberName",
             "props": {
                 "severity": "ERROR",
-                "format": "^[A-Z][A-Z0-9]*(_[A-Z0-9_]+)*$",
+                "format": "^[A-Z][a-zA-Z0-9_]*$",
                 "tokens": [ "ENUM" ]
             }
         },
@@ -215,12 +239,6 @@
             }
         },
         {
-            "type": "Override",
-            "props": {
-                "severity": "ERROR"
-            }
-        },
-        {
             "type": "ParameterName",
             "props": {
                 "severity": "ERROR",
@@ -249,6 +267,37 @@
                 "severity": "INFO",
                 "allowEmptyReturn": false,
                 "enforceReturnType": true
+            }
+        },
+        {
+            "type": "RightCurly",
+            "props": {
+                "severity": "ERROR",
+                "option": "aloneorsingle",
+                "tokens": [
+                            "OBJECT_DECL"
+                ]
+            }
+        },
+        {
+            "type": "RightCurly",
+            "props": {
+                "severity": "ERROR",
+                "option": "alone",
+                "tokens": [
+                            "CLASS_DEF",
+                            "ENUM_DEF",
+                            "ABSTRACT_DEF",
+                            "CLASS_DEF",
+                            "INTERFACE_DEF",
+                            "FUNCTION",
+                            "FOR",
+                            "IF",
+                            "WHILE",
+                            "SWITCH",
+                            "TRY",
+                            "CATCH"
+                ]
             }
         },
         {
